modificacion de textos e imagenes

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<h1>Soluciones web</h1>
+							<p>Sitios web atractivos y funcionales que reflejan la esencia de tu negocio y atraen a tus clientes ideales.</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -35,10 +35,10 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>Hagamos a que tu negocio tenga esa presencia digital que merece</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>Entendemos el dolor</strong> y es por eso que nos dedicamos a transformar tu negocio en una potencia digital. Trabajamos incansablemente para que tu empresa brille en línea, proporcionándote la presencia digital que mereces. Nuestro enfoque se centra en crear sitios web atractivos y funcionales que cautivan a tus clientes y reflejan la esencia de tu marca. Además, optimizamos tu sitio para los motores de búsqueda y dispositivos móviles, asegurando que tu negocio sea fácilmente accesible en la era digital.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -46,19 +46,19 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>Impulsemos tu presencia en línea con diseños a medida</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p><strong>:)</strong> Diseñamos sitios web atractivos y efectivos que reflejan la esencia de tu negocio y atraen a tu público ideal.</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
+								<li class="icon solid fa-laptop">Alto rendimiento</li>
+								<li class="icon solid fa-bolt">Respuesta inmediata</li>
+								<li class="icon solid fa-signal">Alta disponibilidad</li>
+								<li class="icon solid fa-cog">Mejoras contínuas</li>
+								<li class="icon solid fa-map-marker-alt">Tu web en todos lados</li>
+								<!-- <li class="icon solid fa-code">Código eficiente</li> -->
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<!-- <p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p> -->
 						</div>
 					</section>
 
