--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/videito_cool.mp4" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="public/pic01.jpg" alt="" /></span>
 						</div>
 					</section>
 
