--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Soluciones web</h1>
-							<p>Creamos sitios web atractivos y funcionales</p><p> que reflejan la esencia de tu negocio y atraen a tus clientes ideales.</p>
+							<p> Hola!</p>
+							<h1>¡Qué alegría verte :)</h1>
+							<p><span style="color:#B38686;">Bienvenido a soluciones web</span>, donde creamos tu sitio web y nos encargamos de mantenerlo al día</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
