json config, modal desktop OK, msj personal welcome first or not

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<section class="intro">
 			<header>
 				<p> Hola!</p>
-				<h1>¡Qué alegría verte :)</h1>
+				<h1 id="saludo"></h1>
 				<p><span style="color:#B38686;">Bienvenido a soluciones web</span>, donde creamos tu sitio web y nos
 					encargamos de mantenerlo al día</p>
 				<ul class="actions">
@@ -138,7 +138,7 @@
 							<input type="text" name="name" id="name" placeholder="Tu nombre" />
 						</div>
 						<div class="field half">
-							<input type="email" name="email" id="email" placeholder="Email" />
+							<input type="email" name="email" id="email" placeholder="Tu email" />
 						</div>
 						<div class="field">
 							<textarea name="message" id="message"
@@ -173,7 +173,7 @@
 		</section>
 
 		<!-- Copyright -->
-		<div class="copyright">&copy; Soluciones web. All rights reserved. Design: <a href="#">xerpew</a>.</div>
+		<div class="copyright">&copy; Soluciones web. All rights reserved. Design: <a href="#">###</a>.</div>
 
 	</div>
 
@@ -183,7 +183,7 @@
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script type="module" src="assets/js/main.js"></script>
 
 </body>
 
