--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="keywords" content="" />
 	<link rel="shortcut icon" href="images/sol.png" type="image/x-icon">
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<script async src="https://eu.umami.is/script.js" data-website-id="1a97e134-5718-4b19-81cb-003fff031af2"></script>
 </head>
 
 
@@ -185,6 +186,5 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script type="module" src="assets/js/main.js"></script>
-
 </body>
 </html>
