f🦾 umami, 🎞 optimizacion pictures

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 					sitio para los motores de búsqueda y dispositivos móviles, asegurando que tu negocio sea fácilmente
 					accesible en la era digital.</p>
 				<span class="image main"><img src="images/pic02.jpg"
-						alt="empresa-tecnologica-solucionando-problemas-a-clientes" /></span>
+						alt="empresa-tecnologica-solucionando-problemas-a-clientes" />
+				</span>
 			</div>
 		</section>
 
@@ -63,8 +64,8 @@
 				<p><strong>¡Contáctanos y permítenos conocerte!.</strong> Estamos aquí a tu lado, comprometidos con tu
 					negocio, comprendemos tus necesidades y las convertimos en productos digitales de alta calidad.</p>
 				<ul class="actions">
-					<li><a href="#" class="button primary large">quiero contratar</a></li>
-					<li><a href="#aboutus" class="button large">Conócenos</a></li>
+					<li><a href="https://wa.link/z8vaeh" data-umami-event="contact-button" class="button primary large">quiero contratar</a></li>
+					<li><a href="#aboutus" data-umami-event="aboutus-button" class="button large">Conócenos</a></li>
 				</ul>
 			</div>
 		</section>
@@ -149,7 +150,7 @@
 						</div>
 					</div>
 					<ul class="actions">
-						<li><input type="submit" value="Enviar mensaje" class="button primary" /></li>
+						<li><input type="submit" data-umami-event="send-mail-button" value="Enviar mensaje" class="button primary" /></li>
 					</ul>
 				</form>
 			</div>
@@ -159,15 +160,15 @@
 					<li>
 						<h3>nuestras redes</h3>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a> -->
+							<!-- </li> -->
+							<li><a data-umami-event="instagam-button" href="https://www.instagram.com/solwebsolution/?hl=es" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
 							</li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
-							</li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
-							</li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a> -->
+							<!-- </li> -->
+							<!-- <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
+							<!-- <li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li> -->
 						</ul>
 					</li>
 				</ul>
