🤖 mensaje welcome set default and perso

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<section class="intro">
 			<header>
 				<p> Hola!</p>
-				<h1 id="saludo"></h1>
+				<h1 id="saludo">¡Qué alegría verte :)</h1>
 				<p><span style="color:#B38686;">Bienvenido a soluciones web</span>, donde creamos tu sitio web y nos
 					encargamos de mantenerlo al día</p>
 				<ul class="actions">
