--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 						<div class="field half">
 							<input type="email" name="email" id="email" placeholder="Tu email" />
 						</div>
+						<div class="field half">
+							<input type="file" name="file" id="file" accept="image/*" />
+						</div>
 						<div class="field">
 							<textarea name="message" id="message"
 								placeholder="Detalla tus necesidades y estaremos encantados de asistirte."
