--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</ul>
 			</header>
 			<div class="content">
-				<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+				<span class="image fill" data-position="center"><img loading="lazy" src="images/pic01.jpg" alt="portada" /></span>
 			</div>
 		</section>
 
@@ -96,7 +96,7 @@
 						<div class="gallery">
 							<hr>
 							<a href="images/gallery/fulls/05.jpg" class="landscape"><img
-									src="images/gallery/fulls/05.jpg" alt="" /></a>
+									src="images/gallery/fulls/05.jpg" loading="lazy" alt="trabajo en equipos" /></a>
 						</div>
 					</div>
 				</section>
@@ -112,12 +112,12 @@
 					</header>
 					<div class="content">
 						<div class="gallery">
-							<a href="images/gallery/thumbs/08.jpg" class="portrait"><img
-									src="images/gallery/thumbs/08.jpg" alt="" /></a>
-							<a href="images/gallery/thumbs/09.jpg" class="portrait"><img
-									src="images/gallery/thumbs/09.jpg" alt="" /></a>
-							<a href="images/pic01.jpg" class="portrait" style="display: none;"><img
-									src="images/pic01.jpg" alt="" /></a>
+							<a href="images/gallery/thumbs/08.jpg" class="portrait"><img loading="lazy"
+									src="images/gallery/thumbs/08.jpg" alt="paginas web para tu negocio" /></a>
+							<a href="images/gallery/thumbs/09.jpg" class="portrait"><img loading="lazy"
+									src="images/gallery/thumbs/09.jpg" alt="eleva tu negocio" /></a>
+							<a href="images/pic01.jpg" class="portrait" style="display: none;"><img loading="lazy"
+									src="images/pic01.jpg" alt="aumenta tus ventas" /></a>
 						</div>
 					</div>
 				</section>
