--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="" />
 	<link rel="shortcut icon" href="images/sol.png" type="image/x-icon">
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<script async src="https://eu.umami.is/script.js" data-website-id="1a97e134-5718-4b19-81cb-003fff031af2"></script>
+	<script defer src="https://umami.soluweb.cl/script.js" data-website-id="a840445a-898f-4b79-afa4-8df3b1c96a0b"></script>
 </head>
 
 
