cambios general de marca

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 
+<!-- amarillo #f7be1e -->
+
 <head>
 	<title>Soluciones web</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<link rel="shortcut icon" href="images/sol.png" type="image/x-icon">
+	<link rel="shortcut icon" href="images/sol.svg" type="image/x-icon">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<script defer src="https://umami.soluweb.cl/script.js" data-website-id="a840445a-898f-4b79-afa4-8df3b1c96a0b"></script>
 </head>
@@ -21,20 +23,22 @@
 		<p>Hemos recibido tu mensaje, y nuestro equipo se pondrá en contacto contigo a la brevedad para poner en marcha tu proyecto</p>
 		</div>
 		</div>
-	<!-- <div id="modal" style="display: none;"> -->
-		<div id="modal">
+	<div id="modal" style="display: none;">
+		<!-- <div id="modal" > -->
 		<img src="/images/modal.png" alt="">
 		<button style="background-color: #212121; color: wheat !important;">Genial!</button>
 	</div>
 	<!-- Wrapper -->
 	<div id="wrapper">
-
 		<!-- Intro -->
 		<section class="intro">
 			<header>
 				<p> Hola!</p>
 				<h1 id="saludo">¡Qué alegría verte :)</h1>
-				<p><span style="color:#B38686;">Bienvenido a soluciones web</span>, donde creamos tu sitio web y nos
+				<span style="color:#232323;">Bienvenido a</span>
+				<br> 
+				<img src="images/brand.png" alt="">
+				<p>donde creamos tu sitio web y nos
 					encargamos de mantenerlo al día</p>
 				<ul class="actions">
 					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
@@ -48,7 +52,7 @@
 		<!-- Section -->
 		<section id="first">
 			<header>
-				<h2>Hagamos a que tu negocio tenga esa presencia digital que merece</h2>
+				<h2>El futuro de su negocio a la medida</h2>
 			</header>
 			<div class="content">
 				<p><strong>Entendemos el dolor</strong> y es por eso que nos dedicamos a transformar tu negocio en una
